# video-retalking

./: .gitignore  cog.yaml  debug_profile_uv.py  inference.py  pyproject.toml  requirements.txt  test_video_retalking.py  test_video_retalking_uv.py
third_part/GPEN/: gpen_onnx_enhancer.py
utils/: audio.py  inference_utils.py
