[project]
name = "video-retalking"
version = "0.1.0"
description = "VideoReTalking: Real-time Audio-driven Talking Head Generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "basicsr==1.4.2",
    "kornia==0.5.1",
    "face-alignment==1.3.4",
    "ninja==1.10.2.3",
    "einops==0.4.1",
    "facexlib==0.2.5",
    "librosa==0.9.2",
    "numpy==1.23.4",
    "opencv-python",
    "scipy",
    "tqdm",
    "pillow",
    "matplotlib",
    "scikit-image",
    "dlib",
]
